api-k8s-sample/api.yaml
# kubernetes-fastapi LoadBalancer Service
# Enables the pods in a deployment to be accessible from outside the cluster
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-staging-sample-api
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - staging-api.sample.io
    secretName: staging-sample-api-tls
  rules:
  - host: staging-api.sample.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-sample-api-svc
            port:
              number: 80
 
---
apiVersion: v1
kind: Service
metadata:
  name: staging-sample-api-svc
spec:
  type: ClusterIP
  selector:
    app: staging-sample-api
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
# kf-api Deployment
# Defines the deployment of the app running in a pod on any worker node
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-sample-api
  labels:
    app: staging-sample-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-sample-api
  template:
    metadata:
      labels:
        app: staging-sample-api
    spec:
      containers:
        - name: staging-sample-api
          image: 188178130304.dkr.ecr.eu-central-1.amazonaws.com/staging-sample-api:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            # You must specify requests for CPU to autoscale
            # based on CPU utilization
            requests:
              cpu: "250m"
